Development
    Retry playback without accelerated divx if using vdpau and vdpau error 
    Properly display DVD Title in playlist and on window title
    Add support for crystalhd vo, untested as I don't have the hardware.
    Set the allocation to the height and width desired
    Make cursor hiding work in GTK3
    Select Subtitle by ID rather than by description + name
    Fix Issue #514
    Remove "percent" from idledata
    Update translation files with updated file listings
    Remove global variable 'lastfile', and fix code that uses it, fixes issue #514
    Give the media_hbox a default height, makes media_info display work better when showing a video
    Remove dontplaynext = FALSE settings where incorrect
    Update the volume icon on mute
    Fix mute toggle from keyboard key 'm'
    Fix keyboard volume adjustment with 9 and 0
    Use --nokeepaspect when detecting mplayer2
    Don't fail on longer vo names, ie matrixview
    Capture Artist, Title, and Album metadata
    Set channel encoding to binary, solves problems with metadata
    Fix software volume not being set properly
    Make volume gain and post processing work
    Fix fullscreen mode when run as a plugin (X11 only)
    Set runtime in gmtk_media_player
    Cleanup some debug messages
    Fix restart in paused state
    Hook up scroll event for volume change or seeking
    Update media info from ICY stream data
    Fix TYPE_NETWORK for apple.com correctly
    Set tracker sensitivity based on seekability of content
    Reset cache percent to 0 once media starts playing
    Change channel reader priority so cache updates work
    Only show video window when we have video
    Set the background color (black), on initialization
    Never, ever call a GTK function that changes something from a thread, reading is ok
    Remove config.h from SVN
    Apply patch to gmtk_media_player from Byeongsik Jeon
    Apply patch to gm_audio from Byeongsik Jeon